[package]
name = "dev_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11.9", features = ["json"] }
clap = { version = "3.0", features = ["derive"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
prettytable-rs = "0.8"